<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="leaf.net.cn.calculator.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/et_showView"
        android:layout_width="356dp"
        android:layout_height="163dp"
        android:inputType="none"
        android:background="@drawable/shownum_view"
        android:textSize="30dp"
        android:gravity="right"
        android:focusable="false"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:textSize="25dp"
            android:id="@+id/btn_clear"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_style"
            android:text="@string/btn_tag_clear"/>


        <Button
            android:textSize="25dp"
            android:id="@+id/btn_division"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_style"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_tag_division"/>

        <Button
            android:textSize="25dp"
            android:id="@+id/btn_multiplication"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_style"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_tag_multiplication"/>


        <Button
            android:textSize="25dp"
            android:id="@+id/btn_del"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_style"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_tag_del"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:textSize="25dp"
            android:id="@+id/btn_num_seven"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_style"
            android:text="@string/btn_num_seven"/>


        <Button
            android:textSize="25dp"
            android:id="@+id/btn_num_eight"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_style"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_num_eight"/>

        <Button
            android:textSize="25dp"
            android:id="@+id/btn_num_nine"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_style"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_num_nine"/>


        <Button
            android:textSize="25dp"
            android:id="@+id/btn_add"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_style"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_tag_add"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:textSize="25dp"
            android:id="@+id/btn_num_four"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_style"
            android:text="@string/btn_num_four"/>


        <Button
            android:textSize="25dp"
            android:id="@+id/btn_num_fives"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_style"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_num_fives"/>

        <Button
            android:textSize="25dp"
            android:id="@+id/btn_num_six"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_style"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_num_six"/>


        <Button
            android:textSize="25dp"
            android:id="@+id/btn_less"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_style"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_tag_less"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:textSize="25dp"
                    android:id="@+id/btn_num_one"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/btn_style"
                    android:text="@string/btn_num_one" />


                <Button
                    android:textSize="25dp"
                    android:id="@+id/btn_num_two"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/btn_style"
                    android:layout_marginLeft="10dp"
                    android:text="@string/btn_num_two" />

                <Button
                    android:textSize="25dp"
                    android:id="@+id/btn_num_three"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/btn_style"
                    android:text="@string/btn_num_three"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <Button
                    android:textSize="25dp"
                    android:id="@+id/btn_num_zero"
                    android:layout_width="170dp"
                    android:layout_height="80dp"
                    android:background="@drawable/btn_style"
                    android:text="@string/btn_num_zero" />


                <Button
                    android:textSize="25dp"
                    android:id="@+id/btn_tag_float"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/btn_style"
                    android:layout_marginLeft="10dp"
                    android:text="@string/btn_tag_float"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:textSize="25dp"
            android:id="@+id/btn_equal"
            android:layout_width="80dp"
            android:layout_height="170dp"
            android:background="@drawable/btn_style"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_tag_equal"/>

    </LinearLayout>

</LinearLayout>
